# memoryAllocation_p2_New

./: CMakeLists.txt  commands.cmmd  compile_commands.json
include/: command.hpp  file_parser.hpp  memory_manager.hpp
src/: main.cpp
src/file_parser/: file_parser.cpp
src/memory_manager/: memory_manager.cpp  memory_manager_impl.cpp  memory_manager_impl.hpp
src/memory_manager/memory_block/: allocated_block.cpp  allocated_block.hpp  free_block.cpp  free_block.hpp  memory_block.cpp  memory_block.hpp
tests/: CMakeLists.txt  memory_manager_test.cpp
